test/sigs_gateway_api_framework/features/basicrouting/testdata/basicrouting-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: basicrouting-route
  namespace: kgateway-conformance-test
spec:
  parentRefs:
    - name: basic-gateway
      namespace: kgateway-conformance-test
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: echo-backend
          port: 8080
